--- a/Section-8-CodeBuild/build-v1-no-artifacts/buildspec.yml
+++ b/Section-8-CodeBuild/build-v1-no-artifacts/buildspec.yml
@@ -13,7 +13,7 @@ phases:
             - echo "Running on $MY_AWS_REGION"
             - echo "Print Environment Variables"
             - echo "Start the installation process"
-            - echo "Installation Process Completedd"
+            - echo "Installation Process Completed"
     pre_build:
         commands: 
             - echo "This is the start of Pre-Build phase"
